# verilog-ethernet

example/Alveo/fpga_25g/fpga_AU200_10g/: Makefile  create_project.tcl  fpga.xpr  fpga_utilization.rpt  fpga_utilization_hierarchical.rpt
example/Alveo/fpga_25g/fpga_AU200_40g/: README.md  axis_xgmii_rx_128.v  axis_xgmii_tx_128.v  create_project.tcl  eth_mac_40g_fifo.v  fpga.v  fpga.xpr  fpga_core.v  wrapper_40g.v
example/Alveo/fpga_25g/fpga_AU200_40g/imports/: pcs_40g_def_clocking_wrapper.v  pcs_40g_def_common_wrapper.v  pcs_40g_def_core_support.v  pcs_40g_def_example_top.xdc  pcs_40g_def_exdes.v  pcs_40g_def_exdes_tb.v  pcs_40g_def_gt_gtye4_common_wrapper.v  pcs_40g_def_pkt_gen_mon.v  (+2 more)
example/Alveo/fpga_25g/rtl/: fpga_au200.v  fpga_au200_40g.v  fpga_core.v  fpga_core_40g.v
rtl/: axis_xgmii_rx_128 copy 2.v  axis_xgmii_rx_128 copy.v  axis_xgmii_rx_128.v  axis_xgmii_rx_64.v  axis_xgmii_tx_128 (copy 050624).v  axis_xgmii_tx_128.v  axis_xgmii_tx_64.v  eth_mac_10g.v  eth_mac_10g_fifo.v  eth_mac_40g.v  eth_mac_40g_fifo.v
tb/eth_mac_10g/: Makefile  axis_xgmii_tx_128.v  eth_mac_10g.fst  iverilog_dump.v  pyproject.toml  results.xml  sequedaen4.gtkw  test_eth_mac_10g.py
tb/eth_mac_10g/sim_build/: cocotb_iverilog_dump.v
tb/eth_mac_40g/: Makefile  comandos-intalacion-entorno.txt  eth_mac_40g.fst  iverilog_dump.v  pyproject.toml  results.xml  rx.gtkw  rx2.gtkw  test_eth_mac_40g.py  test_tx_full_payload_eth_mac_40g.fst
tb/eth_mac_40g/cocotbext_eth/cocotbext/eth/: __init__.py  xlgmii.py  xlgmii.py.bak
tb/eth_mac_40g/sim_build/: cocotb_iverilog_dump.v
(+366 files in other folders)
